# on-call-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
langs/: he-IL.json
on_call_bot/: __main__.py  configuration.py  consts.py  core.py  globals.py  helpers.py  models.py  sheet_helpers.py  translator.py  utils.py
tests/: test_utils.py
