[tool.poetry]
name = "on-call-bot"
version = "0.1.0"
description = ""
authors = ["Mozes <mpt424@gmail.com>"]
readme = "README.md"
packages = [{include = "on_call_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.33.1"
gspread = "^5.12.2"
telegram = "^0.0.1"
pydantic = "^2.5.2"
python-telegram-bot = {extras = ["job-queue"], version = "^20.7"}
pytz = "^2023.3.post1"
markdown2 = "^2.4.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
ics = "^0.7.2"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
junit_family = "xunit2"
env = [
    "D:BOT_TOKEN=<test_bot_token>",
    "D:COMMANDERS=<developer1,developer2...>",
]
